--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
 
     <body>
-        <div class="container"></div> 
+        <button id="button">Reset grid</button>
+        <div class="container"></div>
     </body>
 </html>
